--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: digital;
+    src: url(font/Digital\ Dismay.otf);
+}
 body{
     margin: 0;
     box-sizing: border-box;
@@ -11,10 +15,13 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    border: 5px solid grey;
     width: 300px;
     height: 100px;
-    background-color: lightblue;
+    background-color: black;
+    color: red;
     font-size: 50px;
+    font-family: digital;
 }
 #stopwatch{
     display: flex;
@@ -23,17 +30,30 @@ body{
     align-items: center;
     width: 300px;
     height: 100px;
-    background-color: lightblue;
+    background-color: rgba(0, 0, 0, 1);
+    color: red;
+    border: 5px solid grey;
     font-size: 50px;
+    font-family: digital;
 }
 #timers{
-    font-size: 30px;
+    font-size: 40px;
     display: flex;
+    height: 50%;
+    align-items: flex-end;
+}
+#buttons{
+    height: 50%;
+    display: flex;
+    gap: 10%;
+    align-items: center;
 }
 #stopwatch button{
     width: 60px;
     height: 25px;
-    background-color: blueviolet;
+    background-color: black;
+    border-radius: 5px;
+    border: 1px solid white;
 }
 #stopwatch{
     display: none;
@@ -41,5 +61,8 @@ body{
 button{
     width: 100px;
     height: 30px;
-    background-color: rgba(212, 231, 34, 0.542);
+    background-color: black;
+    font-size: 15px;
+    border: 3px solid grey;
+    color: white;
 }
